--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    <meta name="twitter:creator" content="@aarjaycreation">
    <meta name="twitter:image" content="https://res.cloudinary.com/dytbosrbw/image/upload/v1699241763/Rahul_Pranjal-Wedding-Celebration_ewxofb.png">
 
-   <title>Rahul & Pranjal's Wedding Celebration | Dec 04</title>
+   <title>Lokesh & Padhu Wedding Celebration | Mar 02</title>
 
    <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Dancing+Script&amp;display=swap'>
@@ -38,18 +38,24 @@
    <div class="sakura-falling"></div>
    <img src="assets/img/right.png" alt="image-top-right" class="top-right-decoration">
    <img src="assets/img/right.png" alt="image-top-left" class="top-left-decoration">
-
+<!--=============== hindi text ===============-->
+<div>
+   <blockquote class="hindi_text">స్వాగతం ।
+      <br> సుస్వాగతం ।।
+   </blockquote>
+</div>
    <div class="wrap">
       <div class="title">
-         <h1 class="rahul">Rahul</h1>
+         <h1 class="rahul">B.Lokesh Kumar</h1>
          <img src="assets/wedding.gif" alt="ring-icon" class="gif">
-         <h1 class="pranjal">Pranjal</h1>
+         <img src="./img.jpg" alt="ring-icon" class="gif">
+
+         <h1 class="pranjal">Lakshmi Padmavathi</h1>
          <div class="home_txt">
             <h3>Are getting married</h3>
             <p>
-               on <span class="date line">04 december 2023</span></29>, At <span class="place line">Jangid Bhawan</span>
-               Akola,
-               Maharashtra
+               on Sunday <span class="date line">03 Mar 2024</span></29>, At <span class="place line"> Rayachoty ,</span>
+           Annamayya Dt..,
             </p>
          </div>
 
@@ -59,33 +65,28 @@
    <!--=============== Mahurat table ===============-->
    <div class="table_container">
       <p class="dance-med">
-         Muhurta Date &amp; Time
+         Muhurtham Date &amp; Time
       </p>
       <table class="responsive-table">
          <tbody class="responsive-table__body">
             <tr class="responsive-table__row">
-               <td class="responsive-table__body__text responsive-table__body__text--name">Dance &amp; Music -</td>
-               <td class="responsive-table__body__text responsive-table__body__text--country">Nov 29, 2023, 07:30 PM
+               <td class="responsive-table__body__text responsive-table__body__text--name">Reception:</td>
+               <td class="responsive-table__body__text responsive-table__body__text--country">Mar 02, 2024, 07:30 PM
                </td>
             </tr>
             <tr class="responsive-table__row">
-               <td class="responsive-table__body__text responsive-table__body__text--name">Ganesh Pujan -</td>
-               <td class="responsive-table__body__text responsive-table__body__text--country">Nov 30, 2023, 08:30 AM
+               <td class="responsive-table__body__text responsive-table__body__text--name">Dinner:</td>
+               <td class="responsive-table__body__text responsive-table__body__text--country">Mar 02, 2024, 08:00 PM
                </td>
             </tr>
             <tr class="responsive-table__row">
-               <td class="responsive-table__body__text responsive-table__body__text--name">Chak Bhat -</td>
-               <td class="responsive-table__body__text responsive-table__body__text--country">Dec 01, 2023, 11:30 AM
+               <td class="responsive-table__body__text responsive-table__body__text--name">Orchestra:</td>
+               <td class="responsive-table__body__text responsive-table__body__text--country">Mar 02, 2024, 8:00 PM
                </td>
             </tr>
             <tr class="responsive-table__row">
-               <td class="responsive-table__body__text responsive-table__body__text--name">Mehndi -</td>
-               <td class="responsive-table__body__text responsive-table__body__text--country">Dec 02, 2023, 10:15 AM
-               </td>
-            </tr>
-            <tr class="responsive-table__row">
-               <td class="responsive-table__body__text responsive-table__body__text--name">Nikasi -</td>
-               <td class="responsive-table__body__text responsive-table__body__text--country">Dec 03, 2023, 02:45 PM
+               <td class="responsive-table__body__text responsive-table__body__text--name">Muhurtham:</td>
+               <td class="responsive-table__body__text responsive-table__body__text--country">Mar 03, 2024, 02:15AM TO 3:15AM
                </td>
             </tr>
          </tbody>
@@ -97,14 +98,14 @@
    <!--=============== home bottom ===============-->
    <div class="home__bottom">
       <p class="dance-med">
-         dinner & dancing to follow
+           to follow below
       </p>
       <div class="actions">
-         <a href="https://maps.app.goo.gl/wPVwUUrKnYUMy24D7" target="_blank">
-            <div class="venue">SEE THE VENUE <i class='bx bx-right-arrow-alt'></i></div>
+         <a href="https://www.google.com/maps/dir//Rajampeta+-T+Sundupalli+Rd,+Raju+Colony,+Rayachoty,+Andhra+Pradesh+516269/@14.0589581,78.6827894,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3bb302374823003d:0xd01ed7ad559b7643!2m2!1d78.7651914!2d14.0589774?entry=ttu" target="_blank">
+            <div class="venue">SEE THE VENUE - KTC <i class='bx bx-right-arrow-alt'></i></div>
          </a>
-         <a href="invitation/widding-invitation-04-Dec.pdf"
-            download="Invitation | 04 Dec | Hope to see you there!" target="_blank">
+         <a href=""
+            download="Invitation | Mar 3 | Hope to see you there!" target="_blank">
             <div class="venue">DOWNLOAD INVITATION <i class='bx bx-right-arrow-alt'></i></div>
          </a>
          <a href="https://calendar.google.com/calendar/event?action=TEMPLATE&tmeid=Nzkxb3IzMzlnMzA4aTFxcHZpZjJmb2dwNmogYWFyamF5Y3JlYXRpb25AbQ&tmsrc=aarjaycreation%40gmail.com" target="_blank">
@@ -117,7 +118,6 @@
    <!--=============== CTA ===============-->
    <p class="CTA">
       Can't wait to celebrate auspicious moment of our family with you! <br>
-      Just a ping away for any queries: <br> <a href="tel: +91 9783351443">+91 9783351443</a>
       <span></span>
    </p>
 
@@ -125,50 +125,20 @@
    <section class="section newsletter">
       <div class="newsletter__container container">
          <p class="newsletter__description">
-            <span class="dance-med">Save the Date!</span> <br> Provide Your Email for Exclusive Wedding Updates
+            <span class="dance-med">Save the Date!</span> <br> Address: Chennamukkapalli, Rayachoty , Annamayya Dt..., <br><a href="tel: +91 9642917338">+91 9642917338</a> <a href="tel: +91 9966024206">+91 9966024206</a>
          </p>
 
-         <form name="newsletter" class="newsletter__form">
-            <input name="Email" id="Email" type="email" placeholder="Enter your email" class="newsletter__input"
-               required>
-            <button class="button" type="submit">
-               Join <i class='bx bx-party'></i>
-            </button>
-
-         </form>
+        
          <div class="my-3">
             <div class="loading">Loading...</div>
          </div>
 
       </div>
    </section>
-   <!--=============== hindi text ===============-->
-   <div>
-      <blockquote class="hindi_text">हल्दी है चंदन है रिश्तों का बंधन है ।
-         <br>पुरा परिवार सहित आपका हार्दिक अभिनंदन है ।।
-      </blockquote>
-   </div>
-   <!--=============== music ===============-->
-   <div class="music">
-      <audio autoplay controls src="./assets/mp3/song.mp3" id="my_audio" loop="loop"></audio>
-   </div>
-   <!--=============== happiness ===============-->
-   <div class="happiness"> <span class="dance-med">Join us in our happiness!</span>
-      <div class="socials">
-         <a class="social__links" target="_blank" href="https://www.pinterest.com/aarjayj/"><i class='bx bx-md bxl-pinterest-alt'></i></a>
-         <a class="social__links" target="_blank" href="https://twitter.com/aarjaycreation"><i class='bx bx-md bxl-twitter'></i></a>
-         <a class="social__links" target="_blank" href="https://www.instagram.com/rahuljangir.works/"><i class='bx bx-md bxl-instagram-alt'></i></a>
-         <a class="social__links" target="_blank" href=https://www.snapchat.com/add/rahul_j20227198?sender_web_id=273bf362-3113-45e5-b719-39c5dd9d5e65&device_type=desktop&is_copy_url=true"><i class='bx bx-md bxl-snapchat'></i></a>
-      </div>
-   </div>
+   
+   
 
-
-   <!--=============== bottom ===============-->
-   <div class="footer">
-      <p>Built with love by <a href="https://aarjaycreation.com/" target="_blank">
-            <span>aarjaycreation.</span></a></p>
-   </div>
-
+ 
 
    <!--=============== floating button ===============-->
    <div class="floating">
@@ -183,15 +153,14 @@
                   <i class='bx bx-sm bx-arrow-to-top'></i>
                </div>
             </a>
-
-            <a href="https://wa.me/+91 9783351443?text=Hi,%20Rahul,%20Congratulations!%20🥳🎉👏🤝👍🌷❤️" class="floating__link"
-               title="whatsapp me">
+            <a href="https://wa.me/9642917338?text=Hi,%20lokesh,%20Congratulations!%20🥳🎉👏🤝👍🌷❤️" class="floating__link" title="whatsapp me">
                <div class="floating__icon">
                   <i class='bx bx-sm bxl-whatsapp'></i>
                </div>
             </a>
+            
 
-            <a href="tel:+91 9783351443" class="floating__link" title="call me">
+            <a href="tel:+91 9642917338" class="floating__link" title="call me">
                <div class="floating__icon">
                   <i class='bx bx-sm bx-phone'></i>
                </div>
