--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <meta name="email" content="aarjayjangir@gmail.com">
    <meta name="copyright" content="Rahul Jangir 2023" />
    <meta property="og:type" content="website" />
-   <meta name="theme-color" content="#6e57e0">
+   <meta name="theme-color" content="#ffff">
    <meta property="og:title" content="Rahul & Pranjal's Wedding Celebration | Dec 04" />
    <meta property="og:description" content="With the divine grace of the almighty, inviting you and your family to Rahul & Pranjal's wedding to be held on Dec 04 at Jangid Bhawan, Akola from 7:00 PM onwards." />
    <meta property="og:image" content="https://res.cloudinary.com/dytbosrbw/image/upload/v1699241763/Rahul_Pranjal-Wedding-Celebration_ewxofb.png" />
@@ -104,7 +104,7 @@
          <a href="https://www.google.com/maps/dir//Rajampeta+-T+Sundupalli+Rd,+Raju+Colony,+Rayachoty,+Andhra+Pradesh+516269/@14.0589581,78.6827894,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3bb302374823003d:0xd01ed7ad559b7643!2m2!1d78.7651914!2d14.0589774?entry=ttu" target="_blank">
             <div class="venue">SEE THE VENUE - KTC <i class='bx bx-right-arrow-alt'></i></div>
          </a>
-         <a href=""
+         <a href="C:\wedding\Wedding-Invitation\invitation\wedding card.pdf"
             download="Invitation | Mar 3 | Hope to see you there!" target="_blank">
             <div class="venue">DOWNLOAD INVITATION <i class='bx bx-right-arrow-alt'></i></div>
          </a>
